--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </footer>
 
   <script>
-    const tools = [
+  const tools = [
   {
     name: "ChatGPT",
     description: "AI chatbot for conversations and problem-solving.",
@@ -145,8 +145,86 @@
     link: "https://scribehow.com",
     tags: ["transcription", "audio"],
     icon: "https://scribehow.com/favicon.ico"
+  },
+  {
+    name: "Lumen5",
+    description: "AI-powered video creation platform.",
+    link: "https://www.lumen5.com",
+    tags: ["video", "creation"],
+    icon: "https://www.lumen5.com/favicon.ico"
+  },
+  {
+    name: "Synthesia",
+    description: "AI video creation with virtual avatars.",
+    link: "https://www.synthesia.io",
+    tags: ["video", "AI"],
+    icon: "https://www.synthesia.io/favicon.ico"
+  },
+  {
+    name: "CopySmith",
+    description: "AI tool for writing content and product descriptions.",
+    link: "https://copysmith.ai",
+    tags: ["writing", "content"],
+    icon: "https://copysmith.ai/favicon.ico"
+  },
+  {
+    name: "Artbreeder",
+    description: "AI platform for creating images through collaborative breeding.",
+    link: "https://www.artbreeder.com",
+    tags: ["image", "art"],
+    icon: "https://www.artbreeder.com/favicon.ico"
+  },
+  {
+    name: "DeepL",
+    description: "AI translation tool with superior accuracy.",
+    link: "https://www.deepl.com",
+    tags: ["translation", "language"],
+    icon: "https://www.deepl.com/favicon.ico"
+  },
+  {
+    name: "Quillbot",
+    description: "AI-powered paraphrasing and summarizing tool.",
+    link: "https://quillbot.com",
+    tags: ["writing", "paraphrasing"],
+    icon: "https://quillbot.com/favicon.ico"
+  },
+  {
+    name: "Frase",
+    description: "AI-driven research and content creation tool.",
+    link: "https://www.frase.io",
+    tags: ["research", "content"],
+    icon: "https://www.frase.io/favicon.ico"
+  },
+  {
+    name: "ContentBot",
+    description: "AI for writing blog posts and product descriptions.",
+    link: "https://contentbot.ai",
+    tags: ["writing", "marketing"],
+    icon: "https://contentbot.ai/favicon.ico"
+  },
+  {
+    name: "Fotor",
+    description: "AI-powered image editing and design platform.",
+    link: "https://www.fotor.com",
+    tags: ["image", "editing"],
+    icon: "https://www.fotor.com/favicon.ico"
+  },
+  {
+    name: "Wordtune",
+    description: "AI writing assistant for better clarity and tone.",
+    link: "https://www.wordtune.com",
+    tags: ["writing", "editing"],
+    icon: "https://www.wordtune.com/favicon.ico"
+  },
+  {
+    name: "ChatSonic",
+    description: "AI chatbot for customer support and content creation.",
+    link: "https://chatsonic.com",
+    tags: ["chat", "customer support"],
+    icon: "https://chatsonic.com/favicon.ico"
   }
 ];
+
 
 
     const grid = document.getElementById("tools-grid");
