--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
       { name: "Synthesia", description: "AI video generation", link: "https://www.synthesia.io", tags: ["AI", "Video", "Creativity"] },
       { name: "Lumen5", description: "AI-powered video creation", link: "https://www.lumen5.com", tags: ["AI", "Video", "Creativity"] },
       { name: "Mubert", description: "AI-powered music generator", link: "https://www.mubert.com", tags: ["AI", "Music", "Creativity"] },
-      { name: "Remove.bg", description: "AI-powered background remover", link: "https://www.remove.bg", tags: ["AI", "Images", "Productivity"] }
+      { name: "Remove.bg", description: "AI for background removal", link: "https://www.remove.bg", tags: ["AI", "Images", "Productivity"] },
+      { name: "Artbreeder", description: "AI-generated art", link: "https://www.artbreeder.com", tags: ["AI", "Art", "Creativity"] },
+      { name: "Runway", description: "AI tools for creators", link: "https://www.runwayml.com", tags: ["AI", "Creativity", "Video"] },
+      { name: "Cortexica", description: "AI for visual search", link: "https://www.cortexica.com", tags: ["AI", "Images", "Business"] },
+      { name: "Fotor", description: "AI-powered photo editor", link: "https://www.fotor.com", tags: ["AI", "Images", "Creativity"] },
+      { name: "Lately.ai", description: "AI for social media content", link: "https://www.lately.ai", tags: ["AI", "Marketing", "Productivity"] },
+      { name: "Veed.io", description: "AI video editor", link: "https://www.veed.io", tags: ["AI", "Video Editing", "Creativity"] }
     ];
 
     const grid = document.getElementById("tools-grid");
